tests/errors/semantics/cannot_use_var_in_outside_run_scope.odl
main :: () -> void {
    x := 0;
    @run x;
};